--- a/src/assets/styles/chat.scss
+++ b/src/assets/styles/chat.scss
@@ -16,6 +16,8 @@
   max-height: 100%;
   overflow-y: auto;
   overscroll-behavior: none;
+  scroll-behavior: smooth;
+  scr
 
 
   &::-webkit-scrollbar {
@@ -43,6 +45,17 @@
 
 .chat__message-item {
   display: flex;
+}
+
+.chat__empty-dialog-message {
+  padding: 10px;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  background: darkblue;
+  color: white;
+  border-radius: 10px;
+  margin-top: 15px;
 }
 
 
